--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ baseurl: ""
 #
 
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 permalink: /:year/:title/
 
 # The release of Jekyll Now that you're using
